--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "koa jsonp middleware",
   "main": "lib/jsonp.js",
   "scripts": {
-    "test": "istanbul cover _mocha test/**/*.spec.js -- -R spec  && istanbul report text && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
+    "test": "istanbul cover _mocha \"test/**/*.spec.js\" -- -R spec  && istanbul report text && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
   "repository": {
     "type": "git",
