--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
   "scripts": {
     "test": "istanbul cover _mocha \"test/**/*.spec.js\" -- -R spec  && istanbul report text && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/keenwon/koa-response-jsonp.git"
-  },
+  "repository": "git+https://github.com/keenwon/koa-response-jsonp.git",
   "files": [
     "lib",
     "README.md"
@@ -20,17 +17,14 @@
     "middleware",
     "node"
   ],
-  "author": {
-    "name": "keenwon",
-    "email": "semanwmj@yeah.net"
-  },
+  "author": "keenwon <semanwmj@yeah.net>",
   "license": "MIT",
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
     "coveralls": "^2.11.9",
     "istanbul": "^0.4.3",
-    "koa": "^1.2.0",
+    "koa": "^2.0.1",
     "mocha": "^3.0.2",
     "mocha-eslint": "^3.0.1",
     "node-fetch": "^1.6.0"
