--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koa-response-jsonp",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "koa jsonp middleware",
   "main": "lib/jsonp.js",
   "scripts": {
@@ -31,6 +31,9 @@
   },
   "dependencies": {
     "debug": "^2.2.0"
+  },
+  "peerDependencies": {
+    "koa": "^2"
   },
   "bugs": {
     "url": "https://github.com/keenwon/koa-response-jsonp/issues"
