--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "koa jsonp middleware",
   "main": "lib/jsonp.js",
   "scripts": {
-    "test": "istanbul cover _mocha \"test/**/*.spec.js\" -- -R spec  && istanbul report text && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
+    "test": "npm run test:lint && npm run test:unit",
+    "test:lint": "elint lint \"**/*.js\" --fix",
+    "test:unit": "istanbul cover _mocha \"test/**/*.spec.js\" -- -R spec  && istanbul report text && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
   "repository": "git+https://github.com/keenwon/koa-response-jsonp.git",
   "files": [
@@ -23,10 +25,11 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "coveralls": "^3.0.2",
+    "elint": "^1.9.0",
+    "elint-preset-standard": "^1.3.0",
     "istanbul": "^0.4.3",
     "koa": "^2.0.1",
     "mocha": "^5.2.0",
-    "mocha-eslint": "^5.0.0",
     "node-fetch": "^2.3.0"
   },
   "dependencies": {
