--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "npm run test:lint && npm run test:unit",
     "test:lint": "elint lint \"**/*.js\" --fix",
-    "test:unit": "istanbul cover _mocha \"test/**/*.spec.js\" -- -R spec  && istanbul report text && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
+    "test:unit": "istanbul cover _mocha \"test/**/*.spec.js\" -- -R spec  && istanbul report text && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
+    "beforecommit": "npm run test"
   },
   "repository": "git+https://github.com/keenwon/koa-response-jsonp.git",
   "files": [
@@ -26,7 +27,7 @@
     "chai-as-promised": "^7.1.1",
     "coveralls": "^3.0.2",
     "elint": "^1.9.0",
-    "elint-preset-standard": "^1.3.0",
+    "elint-preset-kw": "^1.1.0",
     "istanbul": "^0.4.3",
     "koa": "^2.0.1",
     "mocha": "^5.2.0",
