--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "npm run test:lint && npm run test:unit",
     "test:lint": "elint lint \"**/*.js\" --fix",
     "test:unit": "istanbul cover _mocha \"test/**/*.spec.js\" -- -R spec  && istanbul report text && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
-    "beforecommit": "npm run test"
+    "beforecommit": "elint lint commit && npm run test"
   },
   "repository": "git+https://github.com/keenwon/koa-response-jsonp.git",
   "files": [
