--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "coveralls": "^3.0.2",
-    "elint": "^1.9.0",
-    "elint-preset-kw": "^1.1.0",
+    "elint": "^1.10.0-alpha.0",
+    "elint-preset-kw": "^1.3.0",
     "get-port": "^4.1.0",
     "istanbul": "^0.4.3",
     "koa": "^2.0.1",
