--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "npm run test:lint && npm run test:unit",
     "test:lint": "elint lint \"**/*.js\" --fix",
-    "test:unit": "istanbul cover _mocha \"test/**/*.spec.js\" -- -R spec  && istanbul report text && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
+    "test:unit": "nyc --reporter=html --reporter=text mocha \"test/**/*.spec.js\" && nyc report --reporter=text-lcov | coveralls",
     "beforecommit": "elint lint commit && npm run test:lint"
   },
   "repository": "git+https://github.com/keenwon/koa-response-jsonp.git",
@@ -29,10 +29,10 @@
     "elint": "^1.10.0-alpha.0",
     "elint-preset-kw": "^1.3.0",
     "get-port": "^4.1.0",
-    "istanbul": "^0.4.3",
     "koa": "^2.0.1",
     "mocha": "^5.2.0",
-    "node-fetch": "^2.3.0"
+    "node-fetch": "^2.3.0",
+    "nyc": "^13.0.1"
   },
   "dependencies": {
     "debug": "^4.1.0"
