--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "coveralls": "^3.0.4",
-    "elint": "^1.11.1",
+    "elint": "^2.0.0-alpha.1",
     "elint-preset-kw": "^1.8.1",
     "get-port": "^5.0.0",
     "koa": "^2.0.1",
